# aws-lambda-python-cdk

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  app.py  cdk.json  mypy.ini  pyproject.toml
cdk/: stack.py
scripts/: docker  make-deps.sh
services/event_api/: infrastructure.py
services/event_api/runtime/: api.py  event.py
services/event_api/runtime/adapters/: event.py  file_storage.py  message.py  service.py
services/event_api/runtime/adapters/ports/: event_port.py  file_port.py  message_port.py
services/event_processor/: infrastructure.py
services/event_processor/runtime/: processor.py
services/event_processor/runtime/adapters/: service.py  table_store.py
services/event_processor/runtime/adapters/ports/: event_store.py
tests/e2e/api/: conftest.py  infrastructure.py  test_api.py
tests/events/: event_api_gw.json  event_processor_sqs.json
tests/integration/event_api/: conftest.py  infrastructure.py  test_event_api.py
tests/integration/event_processor/: conftest.py  infrastructure.py  test_event_processor.py
tests/unit/: test_event_processor.py  test_event_service.py
tests/unit/adapters/: event_store.py  fake_storage.py  file_port.py  message_port.py
tests/utils/: base_infrastructure.py  constants.py  fetcher.py  provider.py
